fixed the irresponsive page bug

--- a/about.html
+++ b/about.html
@@ -29,41 +29,40 @@
                             Our Courses
                         </a>
                         <ul class="dropdown-menu text-danger" aria-labelledby="navbarDropdown ">
-                            <li><a class="dropdown-item" href="">Scratch (modle 1-3)</a></li>
-                            <li><a class="dropdown-item" href="">Blockly</a></li>
-                            <li><a class="dropdown-item" href="">Robotics</a></li>
-                            <li><a class="dropdown-item" href="">Python</a></li>
+                            <li><a class="dropdown-item" href="#scratch">Scratch (modle 1-3)</a></li>
+                            <li><a class="dropdown-item" href="#blockly">Blockly</a></li>
+                            <li><a class="dropdown-item" href="#robotics">Robotics</a></li>
+                            <li><a class="dropdown-item" href="#python">Python</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="">Web Development</a></li>
-                            <li><a class="dropdown-item" href="">Mobile App Development</a></li>
-                            <li><a class="dropdown-item" href="">Data Science</a></li>
-                            <li><a class="dropdown-item" href="">Graphic Design</a></li>
-                            <li><a class="dropdown-item" href="">UI/UX</a></li>
-                            <li><a class="dropdown-item" href="">Embedded Systems</a></li>
+                            <li><a class="dropdown-item" href="#web-development">Web Development</a></li>
+                            <li><a class="dropdown-item" href="#mobile-app-development">Mobile App Development</a></li>
+                            <li><a class="dropdown-item" href="#data-science">Data Science</a></li>
+                            <li><a class="dropdown-item" href="#graphic-design">Graphic Design</a></li>
+                            <li><a class="dropdown-item" href="#ui-ux">UI/UX</a></li>
+                            <li><a class="dropdown-item" href="#embedded-system">Embedded Systems</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="how-it-works.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             How It Works
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">How It Works</a></li>
-                            <li><a class="dropdown-item" href="#choose">Why Choose EduBureau Coding Club</a></li>
-                            <li><a class="dropdown-item" href="#">Review</a></li>
+                            <li><a class="dropdown-item" href="how-it-works.html">How It Works</a></li>
+                            <li><a class="dropdown-item" href="review.html">Review</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="a" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             About
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">About Us</a></li>
-                            <li><a class="dropdown-item" href="#">Our Story</a></li>
-                            <li><a class="dropdown-item" href="#">Our Team</a></li>
+                            <li><a class="dropdown-item" href="about.html#about">About Us</a></li>
+                            <li><a class="dropdown-item" href="about.html#our-story">Our Story</a></li>
+                            <li><a class="dropdown-item" href="about.html#our-team">Our Team</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -71,9 +70,9 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Contact
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">
-                            <li><a href="info@edubureau.com">info@edubureau.com</a></li></a>
+                        <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="">
+                            <li><a href="https://www.info@edubureau.com">info@edubureau.com</a></li></a>
                     </li>
                 </ul>
 
@@ -88,7 +87,7 @@
                 </ul>
 
                 <div class="me-5">
-                    <a href="./Thefo"> <button class="btn btn-outline-primary " type="submit">Sign
+                    <a href="./Theform/form.html"> <button class="btn btn-outline-primary " type="submit">Sign
                             Up</button> </a>
                 </div>
             </div>
@@ -218,9 +217,9 @@
                                         <h4>Web Developer/Instructor</h4>
                                         <p>
                                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                            This class is the best class I've ever attended. None of my teachers
-                                            were ever mean
-                                            to me. I was able to build a website and create a gallery.
+                                            My name is Joshua Michael am a web developer and also a web developer intructor.
+                                            i am proficent in HTML,CSS,BOOTSTRAP(framwork)and JAVASCRIPT. 
+                                            
                                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                         </p>
                                     </div>
@@ -252,8 +251,8 @@
                                         <h4>Web Developer/ instructor</h4>
                                         <p>
                                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                            My tutor was nice, I learnt a lot and I would like to come back some
-                                            other time.
+                                            My name is Dimkpa Daniel. I am an Instructor in web development and i am proficient in HTML, CSS, BOOTSTRAP and JAVASCRIPT.
+
                                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                         </p>
                                     </div>
@@ -272,7 +271,7 @@
 
     <!-- <footer> -->
     <footer class="text-white pt-5 pb-4 footer-bg">
-        <div class="container-fluid text-center text-md-left">
+        <div class="container-fluid text-left text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-lg-3 col-xl-3 col-md-4 col-sm-3 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 fw-bold text-warning">UK OFFICE</h5>
