--- a/courses.html
+++ b/courses.html
@@ -59,7 +59,6 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="how-it-works.html">How It Works</a></li>
-                            <li><a class="dropdown-item" href="#">Why Choose EduBureau Coding Club</a></li>
                             <li><a class="dropdown-item" href="#">Review</a></li>
                         </ul>
                     </li>
@@ -70,8 +69,8 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="about.html">About Us</a></li>
-                            <li><a class="dropdown-item" href="#">Our Story</a></li>
-                            <li><a class="dropdown-item" href="#">Our Team</a></li>
+                            <li><a class="dropdown-item" href="about.html#our-story">Our Story</a></li>
+                            <li><a class="dropdown-item" href="about.html#our-team">Our Team</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -79,17 +78,12 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Contact
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">
-                            <li><a href="info@edubureau.com">info@edubureau.com</a></li></a>
+                        <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown">
+                            <li><a href="https://www.info@edubureau.com">info@edubureau.com</a></li></a>
                     </li>
-                    <li><a class="dropdown-item" href="#">Our Story</a></li>
-                    <li><a class="dropdown-item" href="#">Our Team</a></li>
-                </ul>
-                </li>
+                    <li><a class="dropdown-item" href="contact.html">Contact Us</a></li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"></a>
+                </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-telephone"></i>+234
@@ -122,89 +116,89 @@
     <!-- course for scratch -->
     <div id="scratch"></div>
     <section>
-       
 
-            <div class="container-fluid mt-5">
-                <div class="row mt-5 justify-content-center shadow-lg mb-5">
-                    <div class="col-lg-6 col-md-4 col-sm-6 p-3 pb-5 mb-3">
-                        <h1 class="text-danger"><img src="./images/scratch icon.png" alt="" srcset="">
-                            SCRATCH
-                            FOR
-                            KIDS</h1>
 
-                        <p class="text-left pt-4">
-                            When people, especially kids engage in logical thinking,<br>they grow in creativity and
-                            problem
-                            solving, which are<br>major life skills required for productivity and success.<br> Scratch
-                            is a
-                            programming language that consists of<br>virtual blocks of codes that are the building
-                            blocks for kids<br>(especially) and introduction to programming. Our Scratch<br>course will
-                            help
-                            you
-                            or
-                            your child create interactive stories,<br>games, and animations through logical thinking,
-                            and
-                            complete
-                            fun<br>projects, building a good startup for programming.
+        <div class="container-fluid mt-5">
+            <div class="row mt-5 justify-content-center shadow-lg mb-5">
+                <div class="col-lg-6 col-md-4 col-sm-6 p-3 pb-5 mb-3">
+                    <h1 class="text-danger"><img src="./images/scratch icon.png" alt="" srcset="">
+                        SCRATCH
+                        FOR
+                        KIDS</h1>
 
-                        </p>
-                        <div class="mt-4 mb-5">
-                            <button onclick="mySignUp()" class="btn btn-outline-danger text-uppercase fw-bold">sign
-                                up</button>
+                    <p class="text-left pt-4">
+                        When people, especially kids engage in logical thinking,<br>they grow in creativity and
+                        problem
+                        solving, which are<br>major life skills required for productivity and success.<br> Scratch
+                        is a
+                        programming language that consists of<br>virtual blocks of codes that are the building
+                        blocks for kids<br>(especially) and introduction to programming. Our Scratch<br>course will
+                        help
+                        you
+                        or
+                        your child create interactive stories,<br>games, and animations through logical thinking,
+                        and
+                        complete
+                        fun<br>projects, building a good startup for programming.
 
-                        </div>
+                    </p>
+                    <div class="mt-4 mb-5">
+                        <button onclick="mySignUp()" class="btn btn-outline-danger text-uppercase fw-bold">sign
+                            up</button>
+
                     </div>
-                    <div class="col-lg-5 col-md-5 cols-sm-6 fs-5">
-                        <div class="container border shadow-lg course-1">
-                            <div class="row pt-3">
-                                <div class="col-lg-6 col-md-6 col-sm-5">
-                                    <p>
-                                        <i class="bi bi-flower1"></i></i> Course details
-                                    </p>
-                                </div>
-                                <hr>
-                                <div class="table-responsive-md overflow-auto">
-                                    <table class="table table-dark table-striped">
-                                        <thead>
-                                            <tr class="">
-                                                <th scope="col">#</th>
-                                                <th scope="col">STANDARD</th>
-                                                <th scope="col">FAST-TRACK </th>
-                                                <th scope="col">WEEKEND</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <th></th>
-                                                <td>(MON-FRI)<br>
-                                                    A.M/P.M
-                                                </td>
-                                                <td>(MON-FRI)<br>
-                                                    EXTENDED SESSION
-                                                </td>
-                                                <td>(3 SESSIONS ON SATURDAY)</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row"></th>
-                                                <td>2 months</td>
-                                                <td>1 months</td>
-                                                <td>6 months</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
+                </div>
+                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6 mt-5">
+                    <div class="container border shadow-lg course-1">
+                        <div class="row pt-3">
+                            <div class="col-lg-6 col-md-6 col-sm-5">
+                                <p>
+                                    <i class="bi bi-flower1"></i></i> Course details
+                                </p>
+                            </div>
+                            <hr>
+                            <div class="table-responsive overflow-auto">
+                                <table class="table table-dark table-striped">
+                                    <thead>
+                                        <tr class="">
+                                            <th scope="col">#</th>
+                                            <th scope="col">STANDARD</th>
+                                            <th scope="col">FAST-TRACK </th>
+                                            <th scope="col">WEEKEND</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th></th>
+                                            <td>(MON-FRI)<br>
+                                                A.M/P.M
+                                            </td>
+                                            <td>(MON-FRI)<br>
+                                                EXTENDED SESSION
+                                            </td>
+                                            <td>(3 SESSIONS ON SATURDAY)</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"></th>
+                                            <td>2 months</td>
+                                            <td>1 months</td>
+                                            <td>6 months</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
 
+
             </div>
-    
+
+        </div>
+
     </section>
 
-    <div id="Blockly">
+    <div id="Blockly"></div>
     <section>
         <!-- course for blockly -->
         <div class="container-fluid mt-4">
@@ -237,7 +231,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6">
+                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6 mt-5">
                     <div class="container border shadow-lg course-1">
                         <div class="row pt-3">
                             <div class="col-lg-6 col-md-6 col-sm-5 ">
@@ -316,7 +310,7 @@
                             up</button>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6">
+                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6 mt-5">
                     <div class="container border shadow-lg course-1">
                         <div class="row pt-3 d-flex">
                             <div class="d-flex d-sm-inline-flex justify-content-between">
@@ -392,16 +386,13 @@
                             up</button>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-5 cols-sm-6  fs-6">
+                <div class="col-lg-5 col-md-5 cols-sm-6  fs-6 mt-5">
                     <div class="container border shadow-lg course-1">
                         <div class="row pt-3">
                             <div class="col-lg-6 col-md-6 col-sm-5 ">
                                 <p>
                                     <i class="bi bi-file-earmark-text"></i> Course details
                                 </p>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-5 fw-bold">
-                                <a href="#">Learn<i class="bi bi-chevron-compact-right"></i></a>
                             </div>
                             <hr>
                             <div class="table-responsive-md overflow-auto">
@@ -475,7 +466,7 @@
                             up</a></button>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6">
+                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6 mt-5">
                     <div class="container border shadow-lg course-1">
                         <div class="row pt-3">
                             <div class="col-lg-6 col-md-6 col-sm-5 ">
@@ -521,7 +512,7 @@
             </div>
         </div>
     </section>
-<div id="Android-App-Development"></div>
+    <div id="Android-App-Development"></div>
     <section>
         <!-- course for Android app  Development -->
         <div class="container-fluid mt-4">
@@ -560,7 +551,7 @@
                             up</a></button>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6">
+                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6 mt-5">
                     <div class="container border shadow-lg course-1">
                         <div class="row pt-3">
                             <div class="col-lg-6 col-md-6 col-sm-5 ">
@@ -627,7 +618,7 @@
                             up</button>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6">
+                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6 mt-5">
                     <div class="container border shadow-lg course-1">
                         <div class="row pt-3">
                             <div class="col-lg-6 col-md-6 col-sm-5 ">
@@ -692,7 +683,7 @@
                             up</button>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6">
+                <div class="col-lg-5 col-md-5 cols-sm-6 fs-6 mt-5 p-5">
                     <div class="container border shadow-lg course-1">
                         <div class="row pt-3">
                             <div class="col-lg-6 col-md-6 col-sm-5">
@@ -701,7 +692,7 @@
                                 </p>
                             </div>
                             <hr>
-                            <div class="table-responsive-md overflow-auto">
+                            <div class="table-responsive-sm overflow-auto">
                                 <table class="table table-dark table-striped">
                                     <thead>
                                         <tr class="">
@@ -737,7 +728,7 @@
             </div>
         </div>
     </section>
-<div id="graphic-designs"></div>
+    <div id="graphic-designs"></div>
     <section>
         <!-- course for graphic Designs -->
         <div class="container-fluid mt-4">
