--- a/how-it-works.html
+++ b/how-it-works.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mx-auto mb-lg-0 text-danger">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="courses.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Our Courses
                         </a>
@@ -47,35 +47,33 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="how-it-works.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             How It Works
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">How It Works</a></li>
-                            <li><a class="dropdown-item" href="#">Why Choose EduBureau Coding Club</a></li>
-                            <li><a class="dropdown-item" href="#">Review</a></li>
+                            <li><a class="dropdown-item" href="how-it-works.html">How It Works</a></li>
+                            <li><a class="dropdown-item" href="review.html">Review</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             About
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">About Us</a></li>
-                            <li><a class="dropdown-item" href="#">Our Story</a></li>
-                            <li><a class="dropdown-item" href="#">Our Team</a></li>
+                            <li><a class="dropdown-item" href="about.html">About Us</a></li>
+                            <li><a class="dropdown-item" href="about.html#our-story">Our Story</a></li>
+                            <li><a class="dropdown-item" href="about.html#our-team">Our Team</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="contact.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Contact
                         </a>
                         <ul class="dropdown-menu p-1" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Our Story</a></li>
-                            <li><a class="dropdown-item" href="#">Our Team</a></li>
+                            
                         </ul>
                     </li>
 
@@ -99,7 +97,7 @@
         <div class="container ofer-top">
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-6">
-                    <h1 class="ms-1 pt-5 of-head ">ONLINE AND ONSITE CODING COURSES.</h1>
+                    <h1 class="ms-1 pt-5 of-head">ONLINE AND ONSITE CODING COURSES.</h1>
                     <p>
                         Students will develop Apps and games for smartphones,<br>build websites, start coding
                         immediately, and make their<br> first steps as digital creators.
@@ -147,7 +145,7 @@
 
 
         </div>
-        <div class="col-lg-5 col-md-5 cols-sm-6 fs-5">
+        <div class="col-lg-5 col-md-5 cols-sm-6 fs-5 mb-5">
             <div class="container border shadow-lg course-1">
 
                 <div class="row pt-3">
